[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.4.1",
]

[project.scripts]
sqlite-mcp = "sqlite_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite_mcp"]
